# czsc

./: .gitignore  AGENTS.md  README.md  audit_merger_bug.py  audit_perfection.py  audit_prices_detailed.py  audit_seg6.py  audit_seg8.py  audit_tks.py  audit_v6_moment.py  check_fake_status.py  check_ma5_gravity.py  check_physics.py  check_prices.py  check_v6_break.py  czsc_demo_plot_debug.txt  debug_5k.py  debug_leap_v9.py  debug_merger.py  debug_seg6_logic.py  debug_v6_v9.py  demo_plot.py  diag_center.py  dump_march_bars.py  dump_seg5.py  dump_seg6.py  extend_check.py  final_audit.py  gdebug_center.py  implementation_plan.md.resolved  inspect_centers.py  investigate_ghost.py  pyproject.toml  requirements.txt  run_sz500_moore_echarts_plot_local.py  sz500_moore_echarts_plot.py  sz500_moore_plot.py  sz500_moore_test.py  test_debug_0720.py  test_get_direction.py  (+6 more)
czsc/: cli.py  strategies.py
czsc/connectors/: research.py
czsc/moore/: ARCHITECTURE.md  __init__.py  analyze.py  objects.py
czsc/moore/daily_segment/: PLAN.md  __init__.py  analyzer.py  center_algo.py  objects.py  state.py  utils.py  日线线段和中枢核心定义.md  日线线段和日线级别线段中枢.md
czsc/moore/daily_segment/centers/: __init__.py  algo.py  maturity_event.py  window_event.py
czsc/moore/daily_segment/helpers/: __init__.py  cold_start.py  commit.py  continuity.py  extension.py  ma_cross.py  non_same.py  trend.py
czsc/moore/higher/: __init__.py  analyzer.py
czsc/moore/segment/: __init__.py  analyzer.py  center.py  fractal.py  macro_engine.py  micro_engine.py  scope_utils.py  trend.py  三仓中枢架构 + 双阶段重播 + 分层标注.md  摩尔缠论核心定义-30F.md
czsc/moore/segment/helpers/: __init__.py  delayed_judgement.py  “延迟结算链”重构PLAN.md
czsc/moore/segment/helpers/analyzer/: __init__.py  center_warehouse.py  macro_sync.py
czsc/moore/segment/helpers/center/: __init__.py  black_k.py  finalize_policy.py  geometry.py  patterns.py  rail_builder.py  visibility.py
czsc/moore/segment/helpers/fractal/: __init__.py
czsc/moore/segment/helpers/macro/: __init__.py  collapse_plan.py  leap_physics.py
czsc/moore/segment/helpers/micro_engine/: PLAN.md  __init__.py  candidate_commit.py  cold_start.py  delayed_judgement.py  extreme_locator.py  refresh_physics.py  reversal_gate.py  rule_validator.py  segment_builder.py  trigger_gate.py
czsc/moore/weekly_segment/: __init__.py  analyzer.py  objects.py  state.py  周线线段和中枢核心定义.md
czsc/py/: bar_generator.py  objects.py  weight_backtest.py
czsc/signals/: tas.py
czsc/traders/: base.py  sig_parse.py
czsc/utils/: __init__.py
docs/: moore_engine_change_summary.md  safe_debugging.md
examples/: 30分钟笔非多即空.py  TS数据源的形态选股.py  use_cta_research.py  use_optimize.py  缠论123多品种回测.py  缠论123类买卖点策略.py
moore_web/: README.md  __init__.py  app.py  service.py
scripts/: run_safe_python.sh
tests/moore/: baseline_scenarios.py  gen_macro_stability_baseline.py  gen_macro_stability_baseline_v3.py  gen_micro_engine_baseline.py  gen_micro_engine_baseline_v2.py  macro_baseline_scenarios.py  test_analyze.py  test_daily_segment.py  test_delayed_judgement_chain.py  test_macro_stability_regression.py  test_micro_engine_baseline_regression.py  test_reversal_fallback_600707.py  test_weekly_segment.py
tests/moore/baselines/: macro_stability_v2.json  macro_stability_v3.json  micro_engine_refactor_v1.json  micro_engine_refactor_v2.json
tests/moore_audit/: audit_engine.py
