[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/czsc",
    "/tests", 
    "/docs",
    "/README.md"
]
exclude = [
    "/.git",
    "/.github",
    "/docs/_build",
]


[project]
name = "czsc"
dynamic = ["version"]
description = "缠中说禅技术分析工具"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "zengbin93", email = "zeng_bin8888@163.com" }
]
keywords = ["缠论", "技术分析", "A股", "期货", "缠中说禅", "量化", "QUANT", "程序化交易"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    # 图表 / 研究通用的最小运行集
    "pandas>=1.0.0",
    "numpy",
    "pyarrow",
    "pyecharts>=1.9.1",
    "loguru",
    "parse",
]

[[tool.uv.index]]
url = "https://pypi.python.org/simple"
default = true

[project.optional-dependencies]
research = [
    "rs-czsc>=0.1.17.post251110",
    "TA-Lib>=0.6",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "plotly",
    "matplotlib",
    "seaborn",
    "lightweight-charts",
    "kaleido",
    "reportlab>=4.0",
]

service = [
    "streamlit",
    "jupyter",
    "ipython",
    "streamlit-ace",
]

integration = [
    "requests>=2.24.0",
    "requests_toolbelt",
    "redis",
    "clickhouse_connect",
    "oss2",
]

dev = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "black",
    "isort",
    "flake8",
    "twine",
    "build",
]

full = [
    "requests>=2.24.0",
    "requests_toolbelt",
    "redis",
    "clickhouse_connect",
    "oss2",
    "rs-czsc>=0.1.17.post251110",
    "TA-Lib>=0.6",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "plotly",
    "matplotlib",
    "seaborn",
    "lightweight-charts",
    "kaleido",
    "reportlab>=4.0",
    "streamlit-ace",
    "streamlit",
    "jupyter",
    "ipython",
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "black",
    "isort",
    "flake8",
    "twine",
    "build",
    "openpyxl",
    "tqdm>=4.66.4",
    "dill",
    "tenacity",
    "Deprecated",
    "cryptography",
    "pytz",
    "fonttools>=4.61.0",
]

[project.urls]
Homepage = "https://github.com/waditu/czsc"
Repository = "https://github.com/waditu/czsc"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "tushare>=1.4.24",
]

[tool.hatch.build.targets.wheel]
packages = ["czsc"]

[tool.hatch.build.targets.wheel.force-include]
"czsc/py/china_calendar.feather" = "czsc/py/china_calendar.feather"
"czsc/py/minutes_split.feather" = "czsc/py/minutes_split.feather"
"czsc/__init__.pyi" = "czsc/__init__.pyi"
"czsc/py.typed" = "czsc/py.typed"

[tool.hatch.version]
path = "czsc/__init__.py"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning:.*'T' is deprecated.*",
    "ignore::RuntimeWarning:.*invalid value encountered in divide.*",
]

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''
